--- a/Config/config.json
+++ b/Config/config.json
@@ -1,10 +1,10 @@
 {
-    "rootFolder": "C:\\Users\\katam\\Documents\\3-Python\\MicrosoftSQLServerSamples\\sql-server-samples\\samples\\databases\\wide-world-importers\\wwi-ssdt\\wwi-ssdt\\Application",
+    "rootFolder": "..\\sql-server-samples\\samples\\databases\\wide-world-importers\\wwi-ssdt\\wwi-ssdt\\Application",
     "tablesFolder": "Tables",
     "proceduresFolder": "Stored Procedures",
     "functionsFolder": "Functions",
     "viewsFolder": "Views",
-    "destinationPath": "C:\\Users\\katam\\Documents\\3-Python\\DatabaseExplorer\\OutputFile",
+    "destinationPath": "..\\DatabaseMigrationHelper\\outputFile",
     "outputFileName":"WWI_Application.xlsx",
     "runTableAnalysis": 1,
     "runProcedureAnalysis": 1,
